updated serviceImpl, Controller classes and improved test coverage