@@ -9,13 +9,13 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
+
 class ProductServiceImplTest {
 
     @Mock
@@ -29,7 +29,6 @@ class ProductServiceImplTest {
         MockitoAnnotations.openMocks(this);
     }
 
-    // Happy path
     @Test
     void testGetProductById() {
         Product product = new Product("Product", "Category", 100.0, "Description");
@@ -37,10 +36,24 @@ class ProductServiceImplTest {
 
         when(productRepository.findById(1L)).thenReturn(Optional.of(product));
 
-        Optional<Product> foundProduct = productService.getProductById(1L);
+        Product foundProduct = productService.getProductById(1L);
 
-        assertTrue(foundProduct.isPresent());
-        assertEquals("Product", foundProduct.get().getName());
+        assertNotNull(foundProduct);
+        assertEquals("Product", foundProduct.getName());
+        verify(productRepository).findById(1L);
+    }
+
+    @Test
+    void testGetProductByIdInvalidId() {
+        assertThrows(IllegalArgumentException.class, () -> productService.getProductById(null));
+        assertThrows(IllegalArgumentException.class, () -> productService.getProductById(0L));
+    }
+
+    @Test
+    void testGetProductByIdNotFound() {
+        when(productRepository.findById(1L)).thenReturn(Optional.empty());
+
+        assertThrows(ProductNotFoundException.class, () -> productService.getProductById(1L));
     }
 
     @Test
@@ -52,8 +65,15 @@ class ProductServiceImplTest {
 
         List<Product> foundProducts = productService.getProductByName("Product");
 
-        assertEquals(1, foundProducts.size());
+        assertFalse(foundProducts.isEmpty());
         assertEquals("Product", foundProducts.get(0).getName());
+    }
+
+    @Test
+    void testGetProductByNameNotFound() {
+        when(productRepository.findProductByName("NonExistentName")).thenReturn(Collections.emptyList());
+
+        assertThrows(ProductNotFoundException.class, () -> productService.getProductByName("NonExistentName"));
     }
 
     @Test
@@ -65,38 +85,55 @@ class ProductServiceImplTest {
 
         List<Product> foundProducts = productService.getProductsByCategory("Category");
 
-        assertEquals(1, foundProducts.size());
+        assertFalse(foundProducts.isEmpty());
         assertEquals("Category", foundProducts.get(0).getCategory());
     }
 
     @Test
+    void testGetProductsByCategoryNotFound() {
+        when(productRepository.findProductByCategory("NonExistentCategory")).thenReturn(Collections.emptyList());
+
+        assertThrows(ProductNotFoundException.class, () -> productService.getProductsByCategory("NonExistentCategory"));
+    }
+
+    @Test
     void testFindAllProductsByPriceAsc() {
-        Product product1 = new Product("Product1", "Category", 50.0, "Description1");
-        Product product2 = new Product("Product2", "Category", 100.0, "Description2");
-        List<Product> products = Arrays.asList(product1, product2);
+        Product product = new Product("Product", "Category", 100.0, "Description");
+        List<Product> products = List.of(product);
 
         when(productRepository.findAllProductsByPriceAsc()).thenReturn(products);
 
         List<Product> foundProducts = productService.findAllProductsByPriceAsc();
 
-        assertEquals(2, foundProducts.size());
-        assertEquals(50.0, foundProducts.get(0).getPrice());
-        assertEquals(100.0, foundProducts.get(1).getPrice());
+        assertFalse(foundProducts.isEmpty());
+        assertEquals(100.0, foundProducts.get(0).getPrice());
+    }
+
+    @Test
+    void testFindAllProductsByPriceAscNotFound() {
+        when(productRepository.findAllProductsByPriceAsc()).thenReturn(Collections.emptyList());
+
+        assertThrows(ProductNotFoundException.class, () -> productService.findAllProductsByPriceAsc());
     }
 
     @Test
     void testFindAllProductsByPriceDesc() {
-        Product product1 = new Product("Product1", "Category", 100.0, "Description1");
-        Product product2 = new Product("Product2", "Category", 50.0, "Description2");
-        List<Product> products = Arrays.asList(product1, product2);
+        Product product = new Product("Product", "Category", 100.0, "Description");
+        List<Product> products = List.of(product);
 
         when(productRepository.findAllByOrderByPriceDesc()).thenReturn(products);
 
         List<Product> foundProducts = productService.findAllProductsByPriceDesc();
 
-        assertEquals(2, foundProducts.size());
+        assertFalse(foundProducts.isEmpty());
         assertEquals(100.0, foundProducts.get(0).getPrice());
-        assertEquals(50.0, foundProducts.get(1).getPrice());
+    }
+
+    @Test
+    void testFindAllProductsByPriceDescNotFound() {
+        when(productRepository.findAllByOrderByPriceDesc()).thenReturn(Collections.emptyList());
+
+        assertThrows(ProductNotFoundException.class, () -> productService.findAllProductsByPriceDesc());
     }
 
     @Test
@@ -106,10 +143,17 @@ class ProductServiceImplTest {
 
         when(productRepository.findAll()).thenReturn(products);
 
-        List<Product> foundProducts = productService.getAllProducts();
+        List<Product> allProducts = productService.getAllProducts();
 
-        assertEquals(1, foundProducts.size());
-        assertEquals("Product", foundProducts.get(0).getName());
+        assertFalse(allProducts.isEmpty());
+        assertEquals("Product", allProducts.get(0).getName());
+    }
+
+    @Test
+    void testGetAllProductsNotFound() {
+        when(productRepository.findAll()).thenReturn(Collections.emptyList());
+
+        assertThrows(ProductNotFoundException.class, () -> productService.getAllProducts());
     }
 
     @Test
@@ -121,24 +165,7 @@ class ProductServiceImplTest {
         Product savedProduct = productService.saveProduct(product);
 
         assertEquals("Product", savedProduct.getName());
-        verify(productRepository, times(1)).save(product);
-    }
-
-    @Test
-    void testUpdateProduct() {
-        Product existingProduct = new Product("Old Product", "Category", 100.0, "Description");
-        existingProduct.setId(1L);
-        Product updatedProduct = new Product("New Product", "Category", 200.0, "Updated Description");
-        updatedProduct.setId(1L);
-
-        when(productRepository.findById(1L)).thenReturn(Optional.of(existingProduct));
-        when(productRepository.save(existingProduct)).thenReturn(existingProduct);
-
-        Product result = productService.updateProduct(1L, updatedProduct);
-
-        assertNotNull(result);
-        assertEquals("New Product", result.getName());
-        assertEquals(200.0, result.getPrice());
+        verify(productRepository).save(product);
     }
 
     @Test
@@ -147,82 +174,46 @@ class ProductServiceImplTest {
         product.setId(1L);
 
         when(productRepository.findById(1L)).thenReturn(Optional.of(product));
+        doNothing().when(productRepository).deleteById(1L);
 
         productService.deleteProduct(1L);
 
-        verify(productRepository, times(1)).deleteById(1L);
-    }
-
-    // Negative cases
-
-    @Test
-    void testGetProductByIdNotFound() {
-        // Test scenario where the product ID does not exist
-        when(productRepository.findById(1L)).thenReturn(Optional.empty());
-
-        Optional<Product> foundProduct = productService.getProductById(1L);
-
-        assertFalse(foundProduct.isPresent(), "Product should not be found");
-    }
-
-    @Test
-    void testGetProductByNameNotFound() {
-        // Test scenario where no products match the given name
-        when(productRepository.findProductByName("NonExistentName")).thenReturn(Collections.emptyList());
-
-        List<Product> foundProducts = productService.getProductByName("NonExistentName");
-
-        assertTrue(foundProducts.isEmpty(), "Product list should be empty");
-    }
-
-    @Test
-    void testGetProductsByCategoryNotFound() {
-        // Test scenario where no products match the given category
-        when(productRepository.findProductByCategory("NonExistentCategory")).thenReturn(Collections.emptyList());
-
-        List<Product> foundProducts = productService.getProductsByCategory("NonExistentCategory");
-
-        assertTrue(foundProducts.isEmpty(), "Product list should be empty");
-    }
-
-    @Test
-    void testFindAllProductsByPriceAscEmptyList() {
-        // Test scenario where no products are found
-        when(productRepository.findAllProductsByPriceAsc()).thenReturn(Collections.emptyList());
-
-        List<Product> foundProducts = productService.findAllProductsByPriceAsc();
-
-        assertTrue(foundProducts.isEmpty(), "Product list should be empty");
-    }
-
-    @Test
-    void testFindAllProductsByPriceDescEmptyList() {
-        // Test scenario where no products are found
-        when(productRepository.findAllByOrderByPriceDesc()).thenReturn(Collections.emptyList());
-
-        List<Product> foundProducts = productService.findAllProductsByPriceDesc();
-
-        assertTrue(foundProducts.isEmpty(), "Product list should be empty");
-    }
-
-    @Test
-    void testUpdateProductNotFound() {
-        // Test scenario where the product to update does not exist
-        Product updatedProduct = new Product("New Product", "Category", 200.0, "Updated Description");
-        updatedProduct.setId(1L);
-
-        when(productRepository.findById(1L)).thenReturn(Optional.empty());
-
-        Product result = productService.updateProduct(1L, updatedProduct);
-
-        assertNull(result, "Product should not be updated as it does not exist");
+        verify(productRepository).deleteById(1L);
     }
 
     @Test
     void testDeleteProductNotFound() {
-        // Test scenario where the product to delete does not exist
         when(productRepository.findById(1L)).thenReturn(Optional.empty());
 
         assertThrows(ProductNotFoundException.class, () -> productService.deleteProduct(1L));
+    }
+
+    @Test
+    void testUpdateProduct() {
+        Product existingProduct = new Product("Product", "Category", 100.0, "Description");
+        existingProduct.setId(1L);
+
+        Product updatedProduct = new Product("Updated Product", "Updated Category", 200.0, "Updated Description");
+        updatedProduct.setId(1L);
+
+        when(productRepository.findById(1L)).thenReturn(Optional.of(existingProduct));
+        when(productRepository.save(existingProduct)).thenReturn(existingProduct);
+
+        Product result = productService.updateProduct(1L, updatedProduct);
+
+        assertEquals("Updated Product", result.getName());
+        assertEquals("Updated Category", result.getCategory());
+        assertEquals(200.0, result.getPrice());
+        assertEquals("Updated Description", result.getDescription());
+    }
+
+    @Test
+    void testUpdateProductNotFound() {
+        Product product = new Product("Product", "Category", 100.0, "Description");
+        product.setId(1L);
+
+        when(productRepository.findById(1L)).thenReturn(Optional.empty());
+
+        assertThrows(ProductNotFoundException.class, () -> productService.updateProduct(1L, product));
     }
 }
